<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/player_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/pick_character_name_label" />

    <EditText
        android:id="@+id/character_name_edit_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player_name_label"
        android:layout_centerHorizontal="true"
        android:maxLines="1"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/player_class_spinner_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/character_name_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/player_class_spinner_label" />

    <Spinner
        android:id="@+id/player_class_spinner"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player_class_spinner_label"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:id="@+id/stats_layout"
        android:layout_marginTop="50dp"
        android:layout_below="@id/player_class_spinner"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light">

        <LinearLayout
            android:id="@+id/stats_label_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/stat_text_style"
                android:text="Str" />

            <TextView
                style="@style/stat_text_style"
                android:text="Int" />

            <TextView
                style="@style/stat_text_style"
                android:text="Wis" />

            <TextView
                style="@style/stat_text_style"
                android:text="Dex" />

            <TextView
                style="@style/stat_text_style"
                android:text="Con" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/stats_value_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/stats_label_container"
            android:layout_marginLeft="100dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/strength_stat"
                style="@style/stat_text_style"
                android:text="10" />

            <TextView
                android:id="@+id/intelligence_stat"
                style="@style/stat_text_style"
                android:text="10" />

            <TextView
                android:id="@+id/wisdom_stat"
                style="@style/stat_text_style"
                android:text="10" />

            <TextView
                android:id="@+id/dexterity_stat"
                style="@style/stat_text_style"
                android:text="10" />

            <TextView
                android:id="@+id/constitution_stat"
                style="@style/stat_text_style"
                android:text="10" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/hp_mana_container"
        android:layout_below="@id/stats_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/hitPointsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hit points"
            style="@style/stat_text_style"/>
        <TextView
            android:layout_toRightOf="@id/hitPointsLabel"
            android:id="@+id/hit_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="100"
            style="@style/stat_text_style"/>
        <TextView
            android:id="@+id/manaPointsLabel"
            android:layout_below="@id/hitPointsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mana"
            style="@style/stat_text_style"/>
        <TextView
            android:layout_toRightOf="@id/manaPointsLabel"
            android:id="@+id/mana_points"
            android:layout_below="@+id/hit_points"
            android:layout_alignLeft="@+id/hit_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="100"
            style="@style/stat_text_style"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/button_stats_container"
        android:layout_below="@+id/hp_mana_container"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/reroll_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:layout_marginRight="5dp"
            android:text="ReRoll"/>
        <Button
            android:id="@+id/save_character_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:text="Save?"/>
    </LinearLayout>
    <Button
        android:id="@+id/start_game_button"
        android:layout_below="@id/button_stats_container"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="50dp"
        android:text="@string/title_activity_start_game"/>
</RelativeLayout>
